fix(checkbox): vertical alignment
https://github.com/telerik/kendo-themes/issues/1119

--- a/packages/default/scss/grid/_layout.scss
+++ b/packages/default/scss/grid/_layout.scss
@@ -1218,11 +1218,6 @@
         display: block;
         margin: 0;
         cursor: pointer;
-
-        .k-checkbox,
-        .k-checkbox-label {
-            vertical-align: middle;
-        }
     }
 
     .k-columnmenu-item {
